update issue of white space scrolling to right

--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -33,6 +33,8 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   scroll-behavior: smooth;
+  // overflow: hidden;
+  background-color: var(--background-dark);
 }
 
 @media only screen and (min-width: $screen-md) {
