--- a/styles/scss/layout/_projects.scss
+++ b/styles/scss/layout/_projects.scss
@@ -2,6 +2,7 @@
   padding: var(--mobile-padding);
   background: var(--background-dark);
   width: 100%;
+  overflow: hidden;
 
   &__heading {
     font-size: var(--hs-lg);
